src/ui_tests/pass_nonconst-err.stderr
error[E0435]: attempt to use a non-constant value in a constant
 --> src/ui_tests/pass_nonconst-err.rs:3:26
  |
2 |     let val = 1u8;
  |     ------- help: consider using `const` instead of `let`: `const val`
3 |     let _ = notzero::nz!(val);
  |                          ^^^ non-constant value
