src/ui_tests/pass_nonconst-err.rs
fn main() {
    let val = 1u8;
    let _ = notzero::nz!(val);
}